--- a/index.html
+++ b/index.html
@@ -973,9 +973,9 @@
  	  	      </div>
  	  	      <div>
  	  	      	 <ul>
- 	  	      	 	<li><a href="https://mrquan122.github.io/vanclDemo2/"> <img src="infoIMG/demo_box1.jpg"></a></li>
- 	  	      	 	<li><a href="https://mrquan122.github.io/vanclDemo1/"> <img src="infoIMG/demo_box2.jpg"></a></li>
- 	  	      	 	<li><a href="https://mrquan122.github.io/vanclDemo2/"> <img src="infoIMG/demo_box3.jpg"></a></li>
+ 	  	      	 	<li><a href="https://mrquan122.github.io/vancl01/"> <img src="infoIMG/demo_box1.jpg"></a></li>
+ 	  	      	 	<li><a href="https://mrquan122.github.io/vancl02/"> <img src="infoIMG/demo_box2.jpg"></a></li>
+ 	  	      	 	<li><a href="https://mrquan122.github.io/vancl01/"> <img src="infoIMG/demo_box3.jpg"></a></li>
                   
  	  	      	 </ul>
  	  	      </div>
