--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
  	     <span class="blank1"></span>
  	     <div>  <p>我叫 全宏灿 </p>
 
-                  <p>25岁</p>
+                  <p>26岁</p>
 
                    <p>期待成为一名前端研发工程师 </p>
 
@@ -923,11 +923,11 @@
  	  	      <h2>小步科技有限公司</h2>
               <div><img src=""></div>
  	  	      <ul>
- 	  	  	     <li>2016.1-2016.9</li>
-               <li>UI制作和业务处理代码编写</li>
-               <li>实现listview布局展示、下拉刷新等功能</li>
-               <li>实现http通信和XML、json数据解析</li>
-               <li>sqlite和shareprefs存取数据</li>
+ 	  	  	     <li>2016.1-2016.10</li>
+               <li>注册、登录、购物车模块功能实现</li>
+               <li>商品列表页动画实现，比如图片轮动、导航定位、放大镜等</li>
+               <li>gulp构建项目</li>
+               <li>git协同团队合作</li>
 
  	  	      </ul>
  	  	      </div>
